<resources>

    <string name="facebook_app_id">853557971380666</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_up">Sign up</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="app_name">Notes</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="label_add_note">Add note</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="label_or">or</string>

    <string name="label_forgotten_password">Forgot your password? </string>
    <string name="label_switch_to_register">Not yet registered? Sign up. </string>
    <string name="label_switch_to_login">I have account already. Login.</string>

    <string name="label_register_screen">Create free account</string>
    <string name="label_login_screen">Log in to Notes</string>

    <string name="message_note_not_empty">Please add note content.</string>
    <string name="warning">Warning</string>


</resources>
