<!-- fragment_screen_slide_page.xml -->
<RelativeLayout android:id="@+id/content"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/background_authentication"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register_screen"
            style="@style/HeaderTextView"
            android:layout_marginBottom="@dimen/space_vertical_small"
            android:id="@+id/textView"/>


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextView"
            android:hint="@string/prompt_name"
            android:imeActionId="@+id/login"
            android:drawablePadding="20dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextView"
            android:hint="@string/prompt_email"
            android:imeActionId="@+id/login"
            android:drawablePadding="20dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:id="@+id/password"
            style="@style/EditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_below="@+id/email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/action_sign_in"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/action_register"
            android:textColor="@android:color/white"
            android:background="@drawable/splash_login_button"
            android:textStyle="bold"
            android:layout_below="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/space_vertical_small"/>



    </LinearLayout>
</RelativeLayout>